--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTE1ODY1ODc1MDUxNzg3ODg1NA.Gh6ovf.e3ngqaqZr0RayfeFU3jYZ72RJBlSHHwGiWDfVc
+TOKEN=MTE1ODY2NDQ3NTkzMTU5MDczNw.GJAYkr.JtcpUqXgR1iov3pRGjT221oAYDcaBLtrLnw09w
