--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ratelimit = "^2.2.1"
 reportlab = "^4.0.6"
 discord-py = "^2.3.2"
 aiohttp = "^3.9.1"
+python-dotenv = "^1.0.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
